añado información a la parte de HTML

--- a/_posts/2022-09-19-html.md
+++ b/_posts/2022-09-19-html.md
@@ -3,6 +3,7 @@ title: "HTML"
 date: 2022-09-19 9:00:00 +0100
 categories: [Sistemas Microinformáticos y Redes, Aplicaciones Web]
 tags: [aplicaciones web, smr, teoría]
+img_path: /assets/img/html/
 ---
 
 ## 1. Introducción
@@ -13,7 +14,7 @@ HTML (Lenguaje de Marcas de Hipertexto, del inglés HyperText Markup Language) e
 
 HTML utiliza "marcas" para etiquetar texto, imágenes y otro contenido para mostrarlo en un navegador Web. Las marcas HTML incluyen "elementos" especiales como `<head>`, `<title>`, `<body>`, `<header>`, `<footer>`, `<article>`, `<section>`, `<p>`, `<div>`, `<span>`, `<img>`, `<aside>`, `<audio>`, `<canvas>`, `<datalist>`, `<details>`, `<embed>`, `<nav>`, `<output>`, `<progress>`, `<video>`, `<ul>`, `<ol>`, `<li>` y muchos otros.
 
-Un elemento HTML se distingue de otro texto en un documento mediante "etiquetas", que consisten en el nombre del elemento rodeado por "`<`" y "`>`". El nombre de un elemento dentro de una etiqueta no distingue entre mayúsculas y minúsculas. Es decir, se puede escribir en mayúsculas, minúsculas o una mezcla. Por ejemplo, la etiqueta `<title>` se puede escribir como `<Title>`, `<TITLE>` o de cualquier otra forma.
+Un elemento HTML se distingue de otro texto en un documento mediante "etiquetas", que consisten en el nombre del elemento rodeado por `<` y `>`. El nombre de un elemento dentro de una etiqueta no distingue entre mayúsculas y minúsculas. Es decir, se puede escribir en mayúsculas, minúsculas o una mezcla. Por ejemplo, la etiqueta `<title>` se puede escribir como `<Title>`, `<TITLE>` o de cualquier otra forma.
 
 <details class="card mb-2">
   <summary class="card-header question">¿Qué significa hipertexto?</summary>
@@ -24,12 +25,18 @@ Del mismo modo que un hipermercado es mejor que un mercado. El hipertexto es mej
   </div>
 </details>
 
+{:.question}
+¿Es HTML case sensitive?
+
 ## 2. Estructura básica de HTML
+
+Ahora veremos cómo combinar los elementos individuales para formar una página HTML completa:
 
 ```html
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8">
     <title>Título de la página</title>
   </head>
   <body>
@@ -43,24 +50,99 @@ Del mismo modo que un hipermercado es mejor que un mercado. El hipertexto es mej
 </html>
 ```
 
-## 3. Nomenclatura HTML
+- `<!DOCTYPE html>`: El elemento doctype. En sus inicios, cuando el HTML llevaba poco tiempo (alrededor de 1991-1992), los doctypes servían como enlaces al conjunto de reglas que la página HTML debía seguir para que fuera considerado buen HTML. En la actualidad se ignora y se considera un legado histórico que hay que incluir para que todo funcione correctamente. 
+- `<html></html>`: El elemento `<html>`. Este elemento envuelve todo el contenido de la página. A veces se lo conoce como el elemento raíz.
+- `<head></head>`: El elemento `<head>` (cabecera). Este elemento actúa como contenedor para todos los parámetros que quieras incluir en el documento HTML que no serán visibles a los visitantes de la página.
+- `<meta charset="utf-8">`: Este elemento establece que tu documento HTML usará la codificación UTF-8, que incluye la gran mayoría de caracteres de todos los idiomas humanos escritos.
+- `<title></title>`: El elemento <title>. Este establece el título de la página, que es el título que aparece en la pestaña del navegador en la que se carga la página.
+- `<body></body>`: El elemento `<body>`. Contiene todo el contenido que quieres mostrar a los usuarios cuando visitan tu página, ya sea texto, imágenes, vídeos, juegos, pistas de audio reproducibles o cualquier otra cosa.
 
-- **Elemento**: Los elementos HTML son los componentes básicos de un documento HTML. En esta página que estás leyendo, por ejemplo, el título, un párrafo y una imagen son elementos H1, P e IMG, respectivamente. No todos los tipos de elemento son visibles: algunos tienen como única función agrupar a otros elementos, por ejemplo.
-- **Etiqueta**: Las etiquetas HTML son los códigos que se usan en el código fuente para declarar y delimitar cada uno de los elementos. Por ejemplo, el elemento P (párrafo) comienza siempre con la etiqueta de apertura `<p>` y suele terminar con la etiqueta de cierre `</p>`. Algo así: `<p>Hola, mundo.</p>`.
-- **Atributo**: Los atributos se incluyen en las etiquetas de apertura para añadir información necesaria para el elemento. Por ejemplo, si quiero incluir aquí un enlace a Facebook, debo añadir al correspondiente elemento A (enlace) un atributo href donde especificaré la dirección de Facebook, así: `<a href="https://www.facebook.com">Ir a Facebook</a>`.
+<details class="card mb-2">
+  <summary class="card-header question">¿Cómo vemos el código HTML de una web?</summary>
+  <div class="card-body" markdown="1">
 
+F12 o Click derecho e Inspeccionar
 
-![Nomenclatura HTML](/assets/img/internet-caracteristicas-evolucion/nomenclaturaHtml.png)
+  </div>
+</details>
+
+{:.question}
+Veamos el código fuente de esta página web. ¿Tiene la estructura que se ha explicado?
+
+### 2.1. Elemento
+
+Los elementos HTML son los componentes básicos de un documento HTML. En esta página que estás leyendo, por ejemplo, el título, un párrafo y una imagen son elementos H1, P e IMG, respectivamente. No todos los tipos de elemento son visibles: algunos tienen como única función agrupar a otros elementos, por ejemplo.
+
+Exploremos un poco el elemento párrafo:
+
+![Elemento y etiquetas HTML](elementoEtiquetas.png)
+_Elemento y etiquetas HTML_
+
+Las principales partes de nuestro elemento son:
+
+- **La etiqueta de apertura**: consiste en el nombre del elemento (en este caso, p), encerrado entre paréntesis angulares de apertura y cierre. Esta etiqueta de apertura marca dónde comienza el elemento o comienza a tener efecto. En este ejemplo, precede al comienzo del texto del párrafo.
+- **El contenido**: Este es el contenido del elemento. En este ejemplo, es el texto del párrafo.
+- **La etiqueta de cierre**: Es lo mismo que la etiqueta de apertura, excepto que incluye una barra diagonal antes del nombre del elemento. Esto indica dónde termina el elemento; en este caso, dónde finaliza el párrafo. No incluir una etiqueta de cierre es un error común de principiante, y puede conducir a extraños resultados.
+  
+El **elemento** lo conforman la etiqueta de apertura, seguida del contenido, seguido de la etiqueta de cierre.
+
+<details class="card mb-2">
+  <summary class="card-header question">¿Cómo se llama un elemento que tiene clave pero no tiene valor?</summary>
+  <div class="card-body" markdown="1">
+
+Elemento vacío o nulo.
+
+  </div>
+</details>
+
+### 2.2. Atributo
+
+Los elementos también pueden tener atributos. Los atributos tienen este aspecto:
+
+![Atributo HTML](atributo.png)
+_Atributo HTML_
+
+Los atributos contienen información extra sobre el elemento que no se mostrará en el contenido. En este caso, el atributo class asigna al elemento un identificador que se puede utilizar para dotarlo de información de estilo.
+
+Un atributo debería tener:
+
+Un espacio entre este y el nombre del elemento. (Para un elemento con más de un atributo, los atributos también deben estar separados por espacios).
+El nombre del atributo, seguido por un signo igual.
+Un valor del atributo, rodeado de comillas de apertura y cierre.
+
+![Nomenclatura HTML](nomenclaturaHtml.png)
 _Nomenclatura HTML_
 
-{:.question}
-¿Cómo se llama un elemento que tiene clave pero no tiene valor?
+<details class="card mb-2">
+  <summary class="card-header question">¿Para que sirve el atributo alt o texto alternativo?</summary>
+  <div class="card-body" markdown="1">
+
+TODO
+
+  </div>
+</details>
+
+<details class="card mb-2">
+  <summary class="card-header question">¿Qué es un atributo booleano?</summary>
+  <div class="card-body" markdown="1">
+
+TODO
+
+  </div>
+</details>
 
 {:.question}
-¿Para que sirve el atributo alt o texto alternativo?
+¿Es correcto el elemento `<a href=https://www.mozilla.org/>mi sitio web favorito</a>`?
 
 {:.question}
-Veamos el código fuente de esta página web. ¿Tiene la estructura que he explicado?
+¿Es correcto el elemento `<a href='http://www.ejemplo.com'>Un enlace a mi ejemplo.</a>`?
+
+{:.question}
+¿Es correcto el elemento `<a href="http://www.ejemplo.com" title="¿Es 'extraño'">Un enlace a mi ejemplo.</a>`?
+
+{:.question}
+¿Es correcto el elemento `<a href='http://www.ejemplo.com' title='¿A que es 'divertido'?'>Un enlace a mi ejemplo.</a>`?
+
 
 <details class="card mb-2">
   <summary class="card-header question">¿Qué es un lenguaje de programación?</summary>
@@ -90,8 +172,8 @@ HTML ("Hypertext Markup Language") no es un lenguaje de programación. Es un len
 </details>
 
 
-## 4. Bibliografía
+## 3. Bibliografía
 
-- [HTML: Lenguaje de etiquetas de hipertexto](https://developer.mozilla.org/es/docs/Web/HTML)
-- [HTML Tutorial](https://www.w3schools.com/html/)
+- [HTML: Lenguaje de etiquetas de hipertexto (Developer Mozilla)](https://developer.mozilla.org/es/docs/Web/HTML)
+- [HTML Tutorial (W3Schools)](https://www.w3schools.com/html/)
 - [Lenguaje HTML5](https://lenguajehtml.com/html/introduccion/que-es-html/)
