Reemplazo masivo de comillas

--- a/_posts/2022-02-06-bluej.md
+++ b/_posts/2022-02-06-bluej.md
@@ -23,7 +23,7 @@ _Desplegar números de líneas_
 
 ### Autocompletar los textos
 
-Cuando queremos autocompletar código no se hace escribiendo directamente “.” como suele ser habitual y nos salen los métodos, etc.. asociadas a ese objeto. Tenemos que pulsar las teclas `Ctrl` + `espacio`.
+Cuando queremos autocompletar código no se hace escribiendo directamente "." como suele ser habitual y nos salen los métodos, etc.. asociadas a ese objeto. Tenemos que pulsar las teclas `Ctrl` + `espacio`.
 
 ## Bibliografía
 
