--- a/_posts/2022-09-19-html.md
+++ b/_posts/2022-09-19-html.md
@@ -171,6 +171,15 @@ HTML ("Hypertext Markup Language") no es un lenguaje de programación. Es un len
   </div>
 </details>
 
+## Formularios
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/u1JRC24rUfk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+{:.question}
+¿De que tipo es el botón por el cual se envía el formulario?
+
+{:.question}
+¿Cuál es el atributo que hace que solo puedas elegir una opción dentro del tipo?
 
 ## 3. Bibliografía
 
