Más cosas para html

--- a/_posts/2022-09-19-html.md
+++ b/_posts/2022-09-19-html.md
@@ -117,7 +117,7 @@ _Nomenclatura HTML_
   <summary class="card-header question">¿Para que sirve el atributo alt o texto alternativo?</summary>
   <div class="card-body" markdown="1">
 
-TODO
+El atributo ALT o etiqueta ALT es un atributo HTML para un texto que describe una imagen. El atributo ALT se coloca directamente en la etiqueta de la imagen. Si una imagen no se puede mostrar por alguna razón, el atributo ALT proporciona texto alternativo para mostrar en su lugar.
 
   </div>
 </details>
@@ -126,7 +126,17 @@ TODO
   <summary class="card-header question">¿Qué es un atributo booleano?</summary>
   <div class="card-body" markdown="1">
 
-TODO
+Son atributos que tienen clave pero no tienen valor. Por ejemplo en este input `<input type="checkbox" name="vehicle" value="car" checked>` el atributo `checked` es booleano.
+
+Los valores true y false están especificamente prohibidos en los atributos booleanos. Para representar el valor false el atributo no debe aparecer.
+
+Todos los siguientes ejemplos son correctos y equivalentes:
+
+```html
+<input type="checkbox" name="vehicle" value="car" checked disabled>
+<input type="checkbox" name="vehicle" value="car" checked="checked" disabled="disabled">
+<input type="checkbox" name="vehicle" value="car" checked disabled="">
+```
 
   </div>
 </details>
@@ -137,11 +147,14 @@ TODO
 {:.question}
 ¿Es correcto el elemento `<a href='http://www.ejemplo.com'>Un enlace a mi ejemplo.</a>`?
 
-{:.question}
-¿Es correcto el elemento `<a href="http://www.ejemplo.com" title="¿Es 'extraño'">Un enlace a mi ejemplo.</a>`?
+
+¿Es correcto el elemento `<a href='http://www.ejemplo.com' title=Es correcto o no>Un enlace a mi ejemplo.</a>`?
 
 {:.question}
-¿Es correcto el elemento `<a href='http://www.ejemplo.com' title='¿A que es 'divertido'?'>Un enlace a mi ejemplo.</a>`?
+¿Es correcto el elemento `<a href="http://www.ejemplo.com" title="¿Es 'correcto'?">Un enlace a mi ejemplo.</a>`?
+
+{:.question}
+¿Es correcto el elemento `<a href='http://www.ejemplo.com' title='¿Es 'correcto'?'>Un enlace a mi ejemplo.</a>`?
 
 
 <details class="card mb-2">
@@ -188,3 +201,4 @@ HTML ("Hypertext Markup Language") no es un lenguaje de programación. Es un len
 - [HTML: Lenguaje de etiquetas de hipertexto (Developer Mozilla)](https://developer.mozilla.org/es/docs/Web/HTML)
 - [HTML Tutorial (W3Schools)](https://www.w3schools.com/html/)
 - [Lenguaje HTML5](https://lenguajehtml.com/html/introduccion/que-es-html/)
+- [Atributos booleanos en HTML ](http://notasjs.blogspot.com/2014/02/atributos-booleanos-en-html.html)
