quito referencia a nulo

--- a/_posts/2022-09-19-html.md
+++ b/_posts/2022-09-19-html.md
@@ -90,7 +90,7 @@ El **elemento** lo conforman la etiqueta de apertura, seguida del contenido, seg
   <summary class="card-header question">¿Cómo se llama un elemento que tiene clave pero no tiene valor?</summary>
   <div class="card-body" markdown="1">
 
-Elemento vacío o nulo.
+Elemento vacío.
 
   </div>
 </details>
