wip criptografia moderna

--- a/_posts/2022-09-25-redes-locales-22-23.md
+++ b/_posts/2022-09-25-redes-locales-22-23.md
@@ -27,4 +27,18 @@ pin: true
 - P02 - [Práctica: Introducción a las redes locales](/posts/practica-introduccion-redes-locales/) ➡ Entrega en papel
 - P03 - Práctica: Modelo de red OSI y TCP/IP
 
+## Videos para poner en bucle 🔁
 
+<iframe width="560" height="315" src="https://www.youtube.com/embed/gVUE2IDwWA0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/HeZWcZmrQUY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/iNh-62Mf0O4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+## Enlaces increibles 🔥
+
+- [CCNA Desde Cero](https://ccnadesdecero.com/)
+
+## Canales de YouTube TOP
+
+- [NASeros](https://www.youtube.com/c/Naseros)
