criptografía moderna terminado

--- a/_posts/2022-09-25-redes-locales-22-23.md
+++ b/_posts/2022-09-25-redes-locales-22-23.md
@@ -25,7 +25,7 @@ pin: true
 
 - P01 - Práctica: Binario (en papel) ➡ Entrega en papel
 - P02 - [Práctica: Introducción a las redes locales](/posts/practica-introduccion-redes-locales/) ➡ Entrega en papel
-- P03 - Práctica: Modelo de red OSI y TCP/IP
+- P03 - [Práctica: Modelo de red OSI y TCP/IP](/posts/practica-modelos-red-osi-vs-tcp-ip)
 
 ## Videos para poner en bucle 🔁
 
