--- a/_posts/2022-09-19-html.md
+++ b/_posts/2022-09-19-html.md
@@ -188,13 +188,37 @@ HTML ("Hypertext Markup Language") no es un lenguaje de programación. Es un len
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/tqLJoWfdqIc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
+{:.question}
+¿Cuáles son los pasos que debo seguir para poder ver que información estaría enviando a un servidor desde un formulario?
+
 <iframe width="560" height="315" src="https://www.youtube.com/embed/u1JRC24rUfk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-{:.question}
-¿De que tipo es el botón por el cual se envía el formulario?
 
-{:.question}
-¿Cuál es el atributo que hace que solo puedas elegir una opción dentro del tipo?
+<details class="card mb-2">
+  <summary class="card-header"> Preguntas sobre el vídeo</summary>
+  <div class="card-body" markdown="1">
+
+1. ¿Para que sirve el elemento `label`?
+1. ¿Para que sirve el atributo for en un elemento `label`?
+1. ¿Para que sirve el atributo name en un elemento `input`?
+1. ¿Para que sirve el atributo `placeholder`?
+1. ¿Se te ocurre un caso real donde necesitemos utilizar dos elementos form dentro de un mismo html y tenga sentido?
+1. ¿Para que sirve el atributo `type="email"`?
+1. ¿Para que sirve el atributo `type="password"`? ¿Se envia la contraseña encriptada si ponemos el atributo `type="password"`?
+1. ¿El atributo `type="submit"` en que dos elementos lo podemos usar? ¿Para que sirve este atributo `type="submit"`?
+1. ¿Para qué sirve el `type="reset"`?
+1. ¿Qué tipos de input existen? text, password, email, etc.
+1. ¿Para qué sirve el atributo `name`? ¿Y el `value`?
+1. ¿El valor de los atributos debe ir siempre entre comillas dobles?
+1. ¿Qué diferencia existe entre los input `type="radio"` y `type="checkbox"`?
+1. ¿Qué diferencia hay entre el `type="date"` y `type="datetime-local"` y `type="time"`?
+1. ¿Podemos en un input con atributo `type="number"` poner números negativos? ¿Y números decimales?
+1. ¿Cuál es el atributo que hace que solo puedas elegir una opción dentro del tipo/categoría?
+1. ¿Depende el formato de la fecha de la lengua en la que escribimos el html (`<html lang="es">`)?
+
+<!-- Comentario para que no se descuajeringue la cosa -->
+  </div>
+</details>
 
 ## 3. Bibliografía
 
