--- a/_posts/2022-10-17-css.md
+++ b/_posts/2022-10-17-css.md
@@ -17,6 +17,9 @@ En este articulo vamos a aprender a utilizar el lenguaje de estilos CSS.
 - Sirve para dar forma, estilo y colores a una página web.
 
 {:.question}
+¿Qué significa en cascada?
+
+{:.question}
 ¿Qué creéis que hace el siguiente código?
 
 ```css
@@ -32,6 +35,7 @@ h1 {
 p {
   font-family: verdana;
   font-size: 20px;
+}
 ```
 
 ## Tres maneras de añadir CSS al HTML
@@ -39,18 +43,16 @@ p {
 ### Como atributo
 
 ```html
-<body style="background-color:powderblue;">
+<body style="background-color:lightblue;">
 ```
 
 ### Usando la etiqueta style
 
 ```html
 <style>
-
 body {
   background-color: lightblue;
 }
-
 </style>
 ```
 
@@ -68,13 +70,13 @@ body {
 }
 ```
 
-{:.question}
-¿Qué tipos de selectores hay? 
+## Tipos de selectores
 
-{:.question}
-¿Pueden dos etiquetas HTML tener el mismo id?
+Existen tres maneras de referenciar elementos html desde CSS:
 
-## Tres maneras de referenciar / Tipos de selectores
+1. Por etiqueta
+1. Por clase
+1. Por identificador
 
 ### Selector de etiqueta
 
@@ -89,7 +91,7 @@ p {
 <p>Esto es un párrafo con estilo</p>
 ```
 
-### Selector de Clase
+### Selector de clase
 
 ```css
 .bienvenida {
@@ -102,7 +104,7 @@ p {
 <p class="bienvenida">Bienvenida con estilo</p>
 ```
 
-### Selector de Identificador
+### Selector de identificador
 
 ```css
 #bienvenida {
@@ -116,6 +118,12 @@ p {
 ```
 
 {:.question}
+¿Qué tipos de selectores hay? 
+
+{:.question}
+¿Pueden dos etiquetas HTML tener el mismo id?
+
+{:.question}
 ¿Y si añadimos varios estilos al mismo elemento?
 
 {:.question}
@@ -127,6 +135,9 @@ p {
 {:.question}
 ¿Qué significa que una web es responsive?
 
+{:.question}
+¿Qué hago si quiero añadir dos clases al mismo elemento?
+
 <iframe width="560" height="315" src="https://www.youtube.com/embed/3yM5uXp-T_0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/hfnMLsWQb1w" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -136,3 +147,4 @@ p {
 - [Lenguaje CSS](https://lenguajecss.com/css/)
 - [CSS Tutorial (W3Schools)](https://www.w3schools.com/css/default.asp)
 - [CSS Battle](https://cssbattle.dev/)
+- [100 DAYS CSS CHALLENGE](https://100dayscss.com/)
