--- a/_posts/2022-10-17-css.md
+++ b/_posts/2022-10-17-css.md
@@ -142,9 +142,12 @@ p {
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/hfnMLsWQb1w" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-## Bibliografía
+## Para todo lo demás... 
 
 - [Lenguaje CSS](https://lenguajecss.com/css/)
 - [CSS Tutorial (W3Schools)](https://www.w3schools.com/css/default.asp)
+
+## Bibliografía
+
 - [CSS Battle](https://cssbattle.dev/)
 - [100 DAYS CSS CHALLENGE](https://100dayscss.com/)
