--- a/_posts/2022-10-17-css.md
+++ b/_posts/2022-10-17-css.md
@@ -16,8 +16,15 @@ En este articulo vamos a aprender a utilizar el lenguaje de estilos CSS.
 - Hojas de estilo en cascada.
 - Sirve para dar forma, estilo y colores a una página web.
 
-{:.question}
-¿Qué significa en cascada?
+<details class="card mb-2">
+  <summary class="card-header question">¿Qué significa en cascada?</summary>
+  <div class="card-body" markdown="1">
+
+Significa que se lee de arriba a abajo.
+    
+<!-- Comentario para que no se descuajeringue la cosa -->
+  </div>
+</details>
 
 {:.question}
 ¿Qué creéis que hace el siguiente código?
@@ -28,7 +35,7 @@ body {
 }
 
 h1 {
-  color: white;
+  color: white; // Pondrá el texto en blanco
   text-align: center;
 }
 
