teoria css completada

--- a/_posts/2022-09-25-redes-locales-22-23.md
+++ b/_posts/2022-09-25-redes-locales-22-23.md
@@ -19,13 +19,14 @@ pin: true
 - UD03 - [Clasificación de redes](/posts/clasificacion-de-redes/)
 - UD04 - [Modelos de red: OSI vs TCP/IP](/posts/modelos-red-osi-vs-tcp-ip/)
 - UD05 - [Capa física](/posts/instalacion-fisica-de-una-red/)
-- UD06 - Capa de enlace
-- UD07 - Capa de red
+- UD06 - [Capa de enlace](/posts/capa-enlace/)
+- UD07 - Capa de red: [Direcciones IPv4](/posts/direcciones-ipv4/)
 - UD08 - [Dispositivos de interconexión](/posts/dispositivos-especificos-de-la-red-local/)
 
 - P01 - Práctica: Binario (en papel) ➡ Entrega en papel
 - P02 - [Práctica: Introducción a las redes locales](/posts/practica-introduccion-redes-locales/) ➡ Entrega en papel
 - P03 - [Práctica: Modelo de red OSI y TCP/IP](/posts/practica-modelos-red-osi-vs-tcp-ip)
+- P04 - [Práctica: Capa física](/posts/practica-capa-fisica/)
 
 ## Evaluación 2
 
