--- a/_posts/2022-10-17-css.md
+++ b/_posts/2022-10-17-css.md
@@ -17,10 +17,12 @@ En este articulo vamos a aprender a utilizar el lenguaje de estilos CSS.
 - Sirve para dar forma, estilo y colores a una página web.
 
 <details class="card mb-2">
-  <summary class="card-header question">¿Qué significa en cascada?</summary>
+  <summary class="card-header question">¿Qué significa que las hojas de estilo están en cascada?</summary>
   <div class="card-body" markdown="1">
 
-Significa que se lee de arriba a abajo.
+Significa que el orden en el que se procesa el CSS influye a la hora de resolver conflictos.
+
+Aunque esto no es totalmente cierto como se indica en el artículo [¿Qué es la Cascada CSS?](https://lenguajecss.com/css/cascada-css/que-es-cascada/).
     
 <!-- Comentario para que no se descuajeringue la cosa -->
   </div>
@@ -45,7 +47,13 @@ p {
 }
 ```
 
-## Tres maneras de añadir CSS al HTML
+## TRES maneras de añadir CSS al HTML
+
+Existen TRES maneras de añadir CSS al HTML:
+
+- Como atributo
+- Usando la etiqueta style
+- Usando un fichero .css externo
 
 ### Como atributo
 
@@ -63,7 +71,7 @@ body {
 </style>
 ```
 
-### Usando un fichero .css
+### Usando un fichero .css externo
 
 ```html
 <head>
@@ -77,9 +85,9 @@ body {
 }
 ```
 
-## Tipos de selectores
+## TRES tipos de selectores
 
-Existen tres maneras de referenciar elementos html desde CSS:
+Existen tres maneras de referenciar elementos HTML desde CSS:
 
 1. Por etiqueta
 1. Por clase
@@ -131,10 +139,26 @@ p {
 ¿Pueden dos etiquetas HTML tener el mismo id?
 
 {:.question}
-¿Y si añadimos varios estilos al mismo elemento?
+¿Y si añadimos varios estilos al mismo elemento? ¿Qué ocurrirá?
 
-{:.question}
-¿Qué son y para qué sirven los combinators?
+<details class="card mb-2">
+  <summary class="card-header question">¿Qué son y para qué sirven los combinators o combinadores?</summary>
+  <div class="card-body" markdown="1">
+
+Al margen de la selección «básica» de elementos a través de CSS, que suele realizarse mediante clases e IDs, existe un amplio abanico de métodos para seleccionar elementos dependiendo de la estructura del documento HTML denominados combinadores CSS:
+
+| Nombre  | Símbolo  | Ejemplo  | Significado |
+|---|---|---|---|
+| Agrupación de selectores  | `,`  | `p, a, div { }` | Se aplican estilos a varios elementos. |
+| Selector descendiente  | Espacio | `#page div { }` | Se aplican estilos a elementos dentro de otros. |
+| Selector hijo  | `>`  | `#page > div { }` | Se aplican estilos a elementos hijos directos. |
+| Selector hermano adyacente  | `+` | `div + div { }` | Se aplican estilos a elementos que siguen a otros. |
+| Selector hermano general  | `~`  | `div ~ div { }` | Se aplican estilos a elementos al mismo nivel. |
+| Selector universal  | `*`  | `#page * { }`  | Se aplican estilos a todos los elementos. |
+
+<!-- Comentario para que no se descuajeringue la cosa -->
+  </div>
+</details>
 
 {:.question}
 ¿Qué diferencia hay entre un margin y un padding?
@@ -144,6 +168,9 @@ p {
 
 {:.question}
 ¿Qué hago si quiero añadir dos clases al mismo elemento?
+
+{:.question}
+¿Qué hago si quiero añadir el mismo estilo a varios elementos?
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/3yM5uXp-T_0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
