cambio carpetas compartidas

--- a/_posts/2022-09-25-redes-locales-22-23.md
+++ b/_posts/2022-09-25-redes-locales-22-23.md
@@ -51,6 +51,12 @@ pin: true
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/iNh-62Mf0O4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
+## Carpeta compartida de la asignatura
+
+La carpeta compartida de la asignatura es `\\ORDAI2PROF\Compartida_RL_22_23`.
+
+El usuario es "alumno2" y la contraseña la misma de vuestros equipos.
+
 ## Enlaces increibles 🔥
 
 - [CCNA Desde Cero](https://ccnadesdecero.com/)
