--- a/_posts/2022-10-17-css.md
+++ b/_posts/2022-10-17-css.md
@@ -172,6 +172,31 @@ Al margen de la selección «básica» de elementos a través de CSS, que suele 
 {:.question}
 ¿Qué hago si quiero añadir el mismo estilo a varios elementos?
 
+{:.question}
+¿Qué diferencia hay entre uppercase y capitalize?
+
+{:.question}
+¿Qué significa indentar?
+
+{:.question}
+¿Qué diferencia hay entre los elementos `block` y los elementos `inline`?
+
+{:.question}
+¿Qué son las small-caps?
+
+{:.question}
+¿Qué diferencias hay entre las posiciones `static`, `relative`, `fixed`, `absolute`, `sticky`?
+
+{:.question}
+¿Qué es el `z-index`? ¿A mayor `z-index` más delante o más detrás? ¿Se puede un `z-index` negativo?
+
+{:.question}
+¿Qué comportamiento define la propiedad `overflow`? ¿Se puede definir un overflow horizontal y vertical por separado?
+
+{:.question}
+¿Qué diferencia hay entre una pseudoclase y un pseudoelemento?
+
+
 <iframe width="560" height="315" src="https://www.youtube.com/embed/3yM5uXp-T_0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/hfnMLsWQb1w" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
