--- a/_posts/2022-10-17-css.md
+++ b/_posts/2022-10-17-css.md
@@ -196,6 +196,64 @@ Al margen de la selección «básica» de elementos a través de CSS, que suele 
 {:.question}
 ¿Qué diferencia hay entre una pseudoclase y un pseudoelemento?
 
+{:.question}
+¿Puedo seleccionar diferentes elementos que compartan un atributo?
+
+{:.question}
+¿Qué diferencia hay entre el selector de atributo `[attribute~="value"]` y el  selector `[attribute*="value"]`?
+
+{:.question}
+¿De dónde adónde va los valores de los colores RGB? ¿Qué significa la A de RGBA?
+
+{:.question}
+¿De dónde adónde va el valor de los colores HUE?
+
+{:.question}
+¿Existe la propiedad `transparency`?
+
+{:.question}
+¿Cuál  es el efecto elipsis de CSS?
+
+{:.question}
+¿Para que  sirve definir un `@font-face` en CSS?
+
+{:.question}
+¿Qué hace el método skew?
+
+{:.question}
+¿Qué ocurre si aplicamos el siguiente estilo `transform: rotateX(90deg);`?
+
+{:.question}
+¿Qué ocurrirá aquí?
+
+```html
+<style>
+div {
+  width: 100px;
+  height: 100px;
+  background: red;
+  transition:width 2s;
+}
+
+div:hover {
+  width: 300px;
+}
+</style>
+
+<body>
+  <div>This is a div</div>
+</body>
+```
+
+<details class="card mb-2">
+  <summary class="card-header question">¿Qué hace el valor `ease` del animation-timing-function?</summary>
+  <div class="card-body" markdown="1">
+
+Mira este ejemplo de W3Schools [Elements with Different timing function Values](https://www.w3schools.com/cssref/tryit.asp?filename=trycss3_animation-timing-function2)
+
+<!-- Comentario para que no se descuajeringue la cosa -->
+  </div>
+</details>
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/3yM5uXp-T_0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
