apaño clave privada

--- a/_posts/2022-10-17-css.md
+++ b/_posts/2022-10-17-css.md
@@ -232,7 +232,7 @@ div {
   width: 100px;
   height: 100px;
   background: red;
-  transition:width 2s;
+  transition: width 2s;
 }
 
 div:hover {
@@ -246,7 +246,7 @@ div:hover {
 ```
 
 <details class="card mb-2">
-  <summary class="card-header question">¿Qué hace el valor `ease` del animation-timing-function?</summary>
+  <summary class="card-header question" markdown="1">¿Qué hace el valor `ease` del animation-timing-function?</summary>
   <div class="card-body" markdown="1">
 
 Mira este ejemplo de W3Schools [Elements with Different timing function Values](https://www.w3schools.com/cssref/tryit.asp?filename=trycss3_animation-timing-function2)
