añado cable de consola

--- a/_posts/2022-09-25-redes-locales-22-23.md
+++ b/_posts/2022-09-25-redes-locales-22-23.md
@@ -54,9 +54,9 @@ pin: true
 
 ## Carpeta compartida de la asignatura
 
-La carpeta compartida de la asignatura es `\\ORDAI2PROF\Compartida_RL_22_23`.
+La carpeta compartida de la asignatura es `\\ORDAI1PROF\Compartida_RL_22_23`.
 
-El usuario es "alumno2" y la contraseña la misma de vuestros equipos.
+El usuario es "alumno" y la contraseña es "alumno".
 
 ## Enlaces increibles 🔥
 
