--- a/_posts/2022-10-17-css.md
+++ b/_posts/2022-10-17-css.md
@@ -178,8 +178,15 @@ Al margen de la selección «básica» de elementos a través de CSS, que suele 
 {:.question}
 ¿Qué significa indentar?
 
-{:.question}
-¿Qué diferencia hay entre los elementos `block` y los elementos `inline`?
+<details class="card mb-2">
+  <summary class="card-header question">¿Qué diferencia hay entre los elementos `block` y los elementos `inline`?</summary>
+  <div class="card-body" markdown="1">
+
+Leer [La propiedad display](https://lenguajecss.com/css/maquetacion-y-colocacion/propiedad-display/)
+
+<!-- Comentario para que no se descuajeringue la cosa -->
+  </div>
+</details>
 
 {:.question}
 ¿Qué son las small-caps?
@@ -258,6 +265,23 @@ Mira este ejemplo de W3Schools [Elements with Different timing function Values](
 <iframe width="560" height="315" src="https://www.youtube.com/embed/3yM5uXp-T_0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/hfnMLsWQb1w" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+## Unidades CSS
+
+Leer [Unidades CSS](https://lenguajecss.com/css/modelo-de-cajas/unidades-css/)
+
+## Modelo de cajas
+
+Leer [Modelo de cajas](https://lenguajecss.com/css/modelo-de-cajas/que-es/)
+
+## Flex
+
+Leer [Flex CSS: Introducción](https://lenguajecss.com/css/maquetacion-y-colocacion/flex/)
+
+## Grid
+
+Leer [Grid CSS: Introducción](https://lenguajecss.com/css/maquetacion-y-colocacion/grid-css/)
+
 
 ## Para todo lo demás... 
 
