--- a/_posts/2022-10-17-css.md
+++ b/_posts/2022-10-17-css.md
@@ -191,8 +191,15 @@ Leer [La propiedad display](https://lenguajecss.com/css/maquetacion-y-colocacion
 {:.question}
 ¿Qué son las small-caps?
 
-{:.question}
-¿Qué diferencias hay entre las posiciones `static`, `relative`, `fixed`, `absolute`, `sticky`?
+<details class="card mb-2">
+  <summary class="card-header question">¿Qué diferencias hay entre las posiciones `static`, `relative`, `fixed`, `absolute`, `sticky`?</summary>
+  <div class="card-body" markdown="1">
+
+Leer [La propiedad position](https://lenguajecss.com/css/maquetacion-y-colocacion/posicionamiento-css/)
+
+<!-- Comentario para que no se descuajeringue la cosa -->
+  </div>
+</details>
 
 {:.question}
 ¿Qué es el `z-index`? ¿A mayor `z-index` más delante o más detrás? ¿Se puede un `z-index` negativo?
