ultima práctica de EV1 AW

--- a/_posts/2022-09-25-redes-locales-22-23.md
+++ b/_posts/2022-09-25-redes-locales-22-23.md
@@ -28,6 +28,7 @@ pin: true
 - P03 - [Práctica: Modelo de red OSI y TCP/IP](/posts/practica-modelos-red-osi-vs-tcp-ip)
 - P04 - [Práctica: Capa física](/posts/practica-capa-fisica/)
 - P05 - [Práctica: Capa de enlace](/posts/practica-capa-enlace/)
+- P06 - [Práctica: Introducción a redes con Packet Tracer](/posts/practica-introduccion-packet-tracer/)
 
 ## Evaluación 2
 
