--- a/_posts/2022-01-30-binario.md
+++ b/_posts/2022-01-30-binario.md
@@ -178,3 +178,5 @@ Habría que responder a la pregunta, ¿Cuántos dígitos en binario necesito par
 ## 4. Bibliografía
 
 - [Direcciones IPv6 – Convenciones y Formatos](https://ccnadesdecero.com/curso/ipv6-formatos-acortar-expandir/)
+- [Conversor de números decimales a binario](https://es.convertbinary.com/decimal-a-binario/)
+- [Conversor de binario a sistema decimal](https://es.convertbinary.com/binario-a-decimal/)
