--- a/_posts/2022-09-25-redes-locales-22-23.md
+++ b/_posts/2022-09-25-redes-locales-22-23.md
@@ -32,19 +32,21 @@ pin: true
 
 ## Evaluación 2
 
-- UD09 - Enrutamiento: estático y dinámico
-- UD10 - Subredes
-- UD11 - WLAN
-- UD12 - VLAN
+- UD09 - [Enrutamiento: estático y dinámico](/posts/enrutamiento/)
+- UD10 - [Subredes](/posts/subredes/)
+- UD11 - WLAN: [Redes inalámbricas](/posts/redes-inalambricas/)
+- UD12 - [¿Qué son las VLAN?](/posts/vlan/)
 
 ## Evaluación 3
 
-- UD13 - La Capa de Transporte.
-- UD14 - NAT estático, dinámico y PAT
-- UD15 - IPv6
+- UD13 - Capa de Transporte
+- UD14 - NAT estático, dinámico y PAT: [NAT o enmascaramiento IP](/posts/nat/)
+- UD15 - IPv6: [Protocolo IPv6](/posts/protocolo-ipv6/)
 - UD16 - La Capa de Aplicación. Servicios de Red. DHCP y DNS.
 - UD17 - Resolución de conflictos en una red local.
 - UD18 - Protección, vigilancia y soporte de redes.
+
+- [Práctica: Servicio DHCP, DNS, HTTP y PAT en Packet Tracer](/posts/practica-servicio-dhcp-dns-http-pat-packet-tracer/)
 
 ## Videos para poner en bucle 🔁
 
