reestructuro capa física y capa de transporte

--- a/_posts/2022-09-25-redes-locales-22-23.md
+++ b/_posts/2022-09-25-redes-locales-22-23.md
@@ -18,9 +18,9 @@ pin: true
 - UD02 - [Binario](/posts/binario/)
 - UD03 - [Clasificación de redes](/posts/clasificacion-de-redes/)
 - UD04 - [Modelos de red: OSI vs TCP/IP](/posts/modelos-red-osi-vs-tcp-ip/)
-- UD05 - [Capa física](/posts/instalacion-fisica-de-una-red/)
+- UD05 - [Capa física](/posts/capa-fisica/)
 - UD06 - [Capa de enlace](/posts/capa-enlace/)
-- UD07 - Capa de red: [Direcciones IPv4](/posts/direcciones-ipv4/)
+- UD07 - [Capa de red](/posts/capa-red/)
 - UD08 - [Dispositivos de interconexión](/posts/dispositivos-especificos-de-la-red-local/)
 
 - P01 - Práctica: Binario (en papel) ➡ Entrega en papel
@@ -39,7 +39,7 @@ pin: true
 
 ## Evaluación 3
 
-- UD13 - Capa de Transporte
+- UD13 - [Capa de Transporte](/posts/capa-transporte)
 - UD14 - NAT estático, dinámico y PAT: [NAT o enmascaramiento IP](/posts/nat/)
 - UD15 - IPv6: [Protocolo IPv6](/posts/protocolo-ipv6/)
 - UD16 - La Capa de Aplicación. Servicios de Red. DHCP y DNS.
