--- a/_posts/2022-05-20-redes-locales-21-22.md
+++ b/_posts/2022-05-20-redes-locales-21-22.md
@@ -21,7 +21,7 @@ tags: [redes locales]
   - [Clasificación de redes](/posts/clasificacion-de-redes/)
   - [Modelos de red: OSI vs TCP/IP](/posts/modelos-red-osi-vs-tcp-ip/)
 - UD 2 - [Instalación física de una red](/posts/capa-fisica/) ➡️ CAPA FÍSICA
-- UD 3 - [Instalación y configuración de los equipos de red](/posts/instalacion-y-configuracion-de-los-equipos-de-red/) ➡️ CAPA DE ENLACE DE DATOS, DE RED Y DE TRANSPORTE
+- UD 3 - [Instalación y configuración de los equipos de red](/posts/capa-red/) ➡️ CAPA DE ENLACE DE DATOS, DE RED Y DE TRANSPORTE
     - [Direcciones IPv4](/posts/direcciones-ipv4/)
     - [¿Qué son las subredes?](/posts/subredes/)
     - [Actividad resuelta de subredes](/posts/actividad-resuelta-subredes/)
