--- a/_posts/2022-10-17-css.md
+++ b/_posts/2022-10-17-css.md
@@ -289,6 +289,12 @@ Leer [Flex CSS: Introducción](https://lenguajecss.com/css/maquetacion-y-colocac
 
 Leer [Grid CSS: Introducción](https://lenguajecss.com/css/maquetacion-y-colocacion/grid-css/)
 
+## ¿Qué es la usabilidad?
+
+- [Ejemplo de como NO hacer las cosas](https://userinyerface.com/)
+- [Principios de usabilidad web de Jacob Nielsen y el diseño UX](https://es.semrush.com/blog/usabilidad-web-principios-jakob-nielsen/)
+
+
 
 ## Para todo lo demás... 
 
