añado video de positions

--- a/_posts/2022-10-17-css.md
+++ b/_posts/2022-10-17-css.md
@@ -195,6 +195,8 @@ Leer [La propiedad display](https://lenguajecss.com/css/maquetacion-y-colocacion
   <summary class="card-header question">¿Qué diferencias hay entre las posiciones `static`, `relative`, `fixed`, `absolute`, `sticky`?</summary>
   <div class="card-body" markdown="1">
 
+<iframe width="560" height="315" src="https://www.youtube.com/embed/9VRkcnQ3GpA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
 Leer [La propiedad position](https://lenguajecss.com/css/maquetacion-y-colocacion/posicionamiento-css/)
 
 <!-- Comentario para que no se descuajeringue la cosa -->
